QA_Ipreo/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
        <values>
            <fullName>Ready for Conversion</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>All_Managers__c</fullName>
        <label>All Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amended_File_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Amended File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Announcement_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Announcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDEmail__c</fullName>
        <label>BDEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDFax__c</fullName>
        <label>BDFax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDPhone__c</fullName>
        <label>BDPhone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDTypeName__c</fullName>
        <label>BDTypeName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDV_Account_Warehouse_Id__c</fullName>
        <label>BDV Account Warehouse Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDV_Contact_Warehouse_Id__c</fullName>
        <label>BDV Contact Warehouse Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookrunners__c</fullName>
        <label>Bookrunners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Opportunity__c</fullName>
        <label>Create Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DM_Name__c</fullName>
        <label>DM Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Time__c</fullName>
        <description>for data migration</description>
        <label>DM_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <description>data migration - from Ian file</description>
        <label>Deal Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_IPO_Date__c</fullName>
        <label>Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange__c</fullName>
        <label>Exchange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_File_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Initial File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDAccountType__c</fullName>
        <label>BD Account Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDCompanyId__c</fullName>
        <externalId>true</externalId>
        <label>BD Company Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BDContactId__c</fullName>
        <externalId>true</externalId>
        <label>BD Contact Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__BD_SyncHistory__c</fullName>
        <description>Contains values (or hashes) for all fields that have ever been synchronized.</description>
        <label>BD Synchronization History</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ipreo_BDSF_1_10__bd_lastsynctime__c</fullName>
        <label>BD Last synchronization time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Issue_Id__c</fullName>
        <description>EDD Integration</description>
        <externalId>true</externalId>
        <label>Issue Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By1__c</fullName>
        <formula>CreatedBy.FirstName +&apos; &apos;+CreatedBy.LastName+&apos; &apos;+&apos;[Role:&apos;+ CreatedBy.UserRole.Name +&apos;]&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Micro_Industry__c</fullName>
        <label>Micro Industry</label>
        <picklist>
            <controllingField>Mid_Industry__c</controllingField>
            <picklistValues>
                <fullName>Agricultural Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversified Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aluminum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrous Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold, Silver, and Precious Stones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Non-Ferrous Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car, Truck, and other Vehicle Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car, Truck, and other Vehicle Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber and Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronic Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durable Household Goods and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Furnishings and Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photographic Equipment and Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sporting Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys and Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing and Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Footwear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Durable Household Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Textile Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breweries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigarettes and Other Tobacco Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distillers and Wineries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm, Meat, and Dairy Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed and Packaged Foods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soft Drinks Manufacturers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mid_Industry__c</fullName>
        <label>Mid Industry</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals and Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Durables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Non-Durables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food, Beverage, and Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homebuilding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel Services and Leisure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil, Gas and Coal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewable Energy Equipment and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology and Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare and Supplies Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace and Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conglomerates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Goods and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software and Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owned_By_Direct_Report__c</fullName>
        <formula>$User.Id =  Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned By Direct Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prevent_Opp_Creation_on_Convert_System__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Within your business processes, you might have your process setup, as to not have Opportunities created directly from Leads during conversion.

The Lead Conversion Page Layout and the conversion process are not customizable though.

Using a validation rule can prevent creation of an Opportunity upon Lead Conversion.

As a workaround, follow these steps:
Create a Checkbox field on Opportunity, default Unchecked
Create a Checkbox field on Leads, default Checked
Map the Lead field to the Opportunity field
Create a Validation rule on Opportunities
As the error Condition Formula insert the Checkbox field you just created.
As the error message, enter &quot;Creating an Opportunity on Lead conversion is currently not allowed.&quot;  Show on top of Page</description>
        <inlineHelpText>This is a &quot;system&quot; field used to prevent Opportunity creation upon Lead conversion.  Do not use for any other purpose.</inlineHelpText>
        <label>Prevent Opp Creation on Convert (System)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C. America/Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ticker__c</fullName>
        <description>data migration - from Ian file</description>
        <label>Ticker</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Buyside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sellside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Withdrawn_Postponed_Date__c</fullName>
        <description>EDD Integration</description>
        <label>Withdrawn/Postponed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this lead.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ALL_Leads_Non_IPO</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>notEqual</operation>
            <value>Filed,Expected,Priced</value>
        </filters>
        <label>ALL Leads Non-IPO</label>
    </listViews>
    <listViews>
        <fullName>AllLeads</fullName>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Ipreo_BDSF_1_10__BDCompanyId__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Deal_Status__c</columns>
        <columns>Estimated_IPO_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ipreo_BDSF_1_10__BDCompanyId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>AllLeadsOwnedBy</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Status_Date__c</columns>
        <columns>Lead_Created_By1__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>msync</value>
        </filters>
        <label>All Leads Owned By Marketo</label>
    </listViews>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Exchange__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Deal_Status__c</columns>
        <columns>Estimated_IPO_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>All_Leads_Ready_for_Conversion</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Ready for Conversion</value>
        </filters>
        <label>All Leads Ready for Conversion</label>
    </listViews>
    <listViews>
        <fullName>Corp_US_IPO_Leads</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Deal_Status__c</columns>
        <columns>Exchange__c</columns>
        <columns>LEAD.INDUSTRY</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>Market_Cap__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Deal_Status__c</field>
            <operation>equals</operation>
            <value>Filed,Expected,Priced</value>
        </filters>
        <filters>
            <field>Exchange__c</field>
            <operation>equals</operation>
            <value>NASDAQ Capital Market,Nasdaq Global Market,Nasdaq Global Select Market</value>
        </filters>
        <filters>
            <field>Exchange__c</field>
            <operation>equals</operation>
            <value>New York Stock Exchange</value>
        </filters>
        <label>Corp US IPO Leads</label>
    </listViews>
    <listViews>
        <fullName>Leads_Created_This_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Leads Created This Week</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Direct_Report</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owned_By_Direct_Report__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Direct Reports&apos; Leads</label>
    </listViews>
    <listViews>
        <fullName>SarahAllLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Ipreo_BDSF_1_10__BDCompanyId__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Deal_Status__c</columns>
        <columns>Estimated_IPO_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Status_Date__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ipreo_BDSF_1_10__BDCompanyId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sarah All Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>sarah_All_Leads_Ready_for_Conversion</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Ready for Conversion</value>
        </filters>
        <label>sarah All Leads Ready for Conversion</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Country_Required_On_Ready_For_Conversion</fullName>
        <active>true</active>
        <description>&quot;Country&quot; field required on Leads when Status = &quot;Ready for Conversion&quot;
SPS-1792</description>
        <errorConditionFormula>ISBLANK(Country) &amp;&amp;  ISPICKVAL(Status, &apos;Ready for Conversion&apos;)</errorConditionFormula>
        <errorDisplayField>Country</errorDisplayField>
        <errorMessage>Country is required when Lead is Ready for Conversion</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Required</fullName>
        <active>true</active>
        <description>Email required for Service User Profile</description>
        <errorConditionFormula>CONTAINS($Profile.Name, &apos;Service User&apos;) &amp;&amp; ISBLANK( Email )</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Please provide valid Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_Required_On_Lead</fullName>
        <active>false</active>
        <description>Prevent creating and saving Lead without region, but bypass that for Sys Admin so that Ipreo System User can continue to create EDD leads.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;Marketo-Salesforce Sync&apos;,
$Profile.Name != &apos;Operations User&apos;, 
$Profile.Name != &apos;Sales User&apos;, 
ISPICKVAL(Region__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Lead region is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Req_Create_Opportunity_Field</fullName>
        <active>false</active>
        <description>Create opportunity field is required at Ready for Conversion.
$Permission.By_Pass_Validation is custom permission which will be assigned to Profiles to by pass this validation.</description>
        <errorConditionFormula>ISBLANK( Text(Create_Opportunity__c) ) &amp;&amp;  NOT($Permission.By_Pass_Validation)</errorConditionFormula>
        <errorDisplayField>Create_Opportunity__c</errorDisplayField>
        <errorMessage>Create Opportunity field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Opty_Creation_Create_Opty_field</fullName>
        <active>true</active>
        <description>Validate opportunity creation based on field Create Opportunity on Lead</description>
        <errorConditionFormula>OR(
	( Text(Create_Opportunity__c) ) = &apos;Yes&apos; 
	&amp;&amp; 
	ISBLANK( ConvertedOpportunityId )
	,
	( Text(Create_Opportunity__c) ) = &apos;No&apos; 
	&amp;&amp; 
	NOT(ISBLANK( ConvertedOpportunityId ))
)	
&amp;&amp;  IsConverted</errorConditionFormula>
        <errorMessage>Please check the values of &apos;Create Opportunity&apos; and &apos;Do not create a new opportunity upon conversion&apos; before proceeding</errorMessage>
    </validationRules>
</CustomObject>